--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-expo": "~8.1.0"
   },
   "private": true
